nav align text - fix

--- a/style.css
+++ b/style.css
@@ -39,11 +39,6 @@
 	border-radius: 8px;
 }
 
-.activeNavItem a {
-	display: flex;
-	align-items: center;
-}
-
 * {
 	font-family: "OpenSans-Regular";
 	box-sizing: border-box;
@@ -429,6 +424,8 @@ nav > ul li {
 }
 
 nav > ul li a {
+	display: flex;
+	align-items: center;
 	text-decoration: none;
 	font-size: 16px;
 	font-weight: 400;
